<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".tabs.CreditsTabFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_about"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="30sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_best"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="30sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_numbers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>